  * This attempts to list the features not yet ported and brand new against 0.39.x, last Python2/GTK2 branch
  * The following imports are missing and may not be implemented at all if not requested: Basket, EPIM HTML, KeyNote, KnowIt, Treepad Lite, TuxCards
  * New: Export to PDF support for hyperlinks (work of @ForeverRainbow)
  * New: Duplicate a node and its subnodes (before only the selected node could be duplicated)
  * New: Option to scroll beyond the last line, enabled by default
  * New: The rich text does no longer have light/dark/custom theme but a range of themes to select from like already for plain text & code
  * New: Tables also can select their own theme like rich text and plain text & code
  * New: You can now right click a node or an anchor and select to copy a link to it in the clipboard, then paste the link into rich text
  * New: Formatting tag to indent/unindent (work of @metal450)
  * New: The tables are implemented with a different library widget, editing a cell is easier, Ctrl+Arrow to move cursor between cells
  * New: For both codeboxes and tables, Ctrl+Space allows to move the cursor in and out
  * New: Rich text, monospace tag has the font configurable in the preferences dialog
  * New: Column edit mode scintilla-like holding down Ctrl and Alt and selecting the column (cut/copy/paste not yet supported)
  * New: Foreground and background tags in the rich text can be removed without altering the other tags
  * New: The cherrytree backup files can be saved in a configured directory rather than the document directory
  * New: Import from markdown file/folder (work of @ForeverRainbow)
  * New: Option for markdown auto replacement to rich text (work of @ForeverRainbow)
  * New: The toolbar supports multiple rows of icons
  * New: Filetype icons for file attachments on Linux (work of @metal450)
  * New: it is configurable whether to wrap or not the nodes names in the tree; off by default